change DITAP instructors

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -395,7 +395,7 @@ class_2_spots:
                 <h4>Instructors</h4>
                 <p>
                   Chris Cairns, Dan Levenson, Robert
-                  Read, and Lara Kohl
+                  Read, and Leslie Garner Franklin
                 </p>
               </div>
               <div class="tuition-card-meta-info">
