--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -359,7 +359,7 @@ class_2_spots:
               <p><strong>Location:</strong> Online</p>
               <p>
                 <strong>Instructors:</strong> Chris Cairns, Dan Levenson, Robert
-                Read, and Lara Kohl
+                Read, and Leslie Garner Franklin
               </p>
               <p><strong>Cost:</strong> $750 USD</p>
             </div>
