--- a/_projects/ca_hhs_agile_training.html
+++ b/_projects/ca_hhs_agile_training.html
@@ -25,7 +25,7 @@ technologies:
   - Git / GitHub
 practices:
   - Learning by doing
-  - Scrum
+  - Scrum framework
   - Story writing
   - Story estimation
   - Velocity calculation
