--- a/_projects/ca_hhs_agile_training.html
+++ b/_projects/ca_hhs_agile_training.html
@@ -17,8 +17,8 @@ project_members:
   - josh-dorothy
 technologies:
   - HTML / CSS
-  - JavaScrtipt
-  - Twitter Boostrap
+  - JavaScript
+  - Twitter Bootstrap
   - Ruby
   - Jekyll
   - GitHub Pages
