--- a/pages/experience/index.html
+++ b/pages/experience/index.html
@@ -8,10 +8,11 @@ redirect_from:
   - /work/maalka/
   - /work/people-power/
   - /work/team-member/john-teeter/
+  - /experience/
 pagination:
   enabled: true
   per_page: 10000
-  collection: projects
+  collection: experience
   sort_field: "order"
   sort_reverse: false
 ---
