fix another bug

--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -12,7 +12,7 @@ redirect_from:
 pagination:
   enabled: true
   per_page: 10000
-  collection: experience
+  collection: projects
   sort_field: "order"
   sort_reverse: false
 ---
