--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -244,8 +244,7 @@ class_2_spots:
               <p>Want to know more about our course?</p>
               <p class="mt-3">
                 <a href="/assets/Skylight-DITAP-Syllabus.pdf"
-                  >Read syllabus
-                  <i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i
+                  >Read syllabus <i class="fal fa-long-arrow-right" aria-hidden="true"></i
                 ></a>
               </p>
             </div>
