update ditap card headings

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -385,18 +385,18 @@ class_2_spots:
             </p>
             <div class="tuition-card-meta mt-3">
               <div class="tuition-card-meta-info">
-                <h4>Location</h4>
+                <h4>Location:</h4>
                 <p>Online + Washington DC</p>
               </div>
               <div class="tuition-card-meta-info">
-                <h4>Instructors</h4>
+                <h4>Instructors:</h4>
                 <p>
                   Chris Cairns, Dan Levenson, Robert
                   Read, and Leslie Garner Franklin
                 </p>
               </div>
               <div class="tuition-card-meta-info">
-                <h4>Cost</h4>
+                <h4>Cost:</h4>
                 <p>$7,500 USD</p>
               </div>
             </div>
