--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -31,9 +31,8 @@ class_2_spots:
               <a
                 class="btn btn-warning text-dark mr-2 mt-sm-3"
                 href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
-                >Register now
-                <i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i
-              ></a>
+                >Register networking
+              </a>
             </div>
           </div>
         </div>
@@ -65,8 +64,7 @@ class_2_spots:
         <a
           class="btn btn-primary font-weight-bold mt-2"
           href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
-          >Register now
-          <i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i
+          >Register now</i
         ></a>
       </div>
     </div>
@@ -217,8 +215,9 @@ class_2_spots:
               <p class="mt-3">
                 <a
                   href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
-                  >Register now<i
-                    class="fal fa-long-arrow-right ml-2"
+                  >Register now
+                  <i
+                    class="fal fa-long-arrow-right"
                     aria-hidden="true"
                   ></i
                 ></a>
