--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -244,7 +244,8 @@ class_2_spots:
               <p>Want to know more about our course?</p>
               <p class="mt-3">
                 <a href="/assets/Skylight-DITAP-Syllabus.pdf"
-                  >Read syllabus <i class="fal fa-long-arrow-right" aria-hidden="true"></i
+                  >Read syllabus
+                  <i class="fal fa-long-arrow-right" aria-hidden="true"></i
                 ></a>
               </p>
             </div>
@@ -350,7 +351,9 @@ class_2_spots:
               <div
                 role="img"
                 class="employee-img"
-                style="background-image: url(/img/people/leslie-garner-franklin.jpg)"
+                style="
+                  background-image: url(/img/people/leslie-garner-franklin.jpg);
+                "
                 title="Leslie Garner Franklin"
               ></div>
             </div>
@@ -358,9 +361,10 @@ class_2_spots:
           <div class="col-12 col-lg-8">
             <h3>Leslie Garner Franklin</h3>
             <p>
-              Leslie brings nearly two decades of experience in user research, user experience design,
-              product management, digital leadership, and instructional design. She started her career
-              at Teach For America, and has worked for notable design firms such as EchoUser.
+              Leslie brings nearly two decades of experience in user research,
+              user experience design, product management, digital leadership,
+              and instructional design. She started her career at Teach For
+              America, and has worked for notable design firms such as EchoUser.
             </p>
           </div>
         </div>
@@ -391,8 +395,8 @@ class_2_spots:
               <div class="tuition-card-meta-info">
                 <h4>Instructors:</h4>
                 <p>
-                  Chris Cairns, Dan Levenson, Robert
-                  Read, and Leslie Garner Franklin
+                  Chris Cairns, Dan Levenson, Robert Read, and Leslie Garner
+                  Franklin
                 </p>
               </div>
               <div class="tuition-card-meta-info">
@@ -464,9 +468,9 @@ class_2_spots:
             to work activities, and working on assignments).
           </li>
         </ul>
-        {% endcapture %} {% include accordion.html accordion_header =
-        'What’s the expected workload?' accordion_body = accordion_body
-        accordion_index = '3' %} {% capture accordion_body %}
+        {% endcapture %} {% include accordion.html accordion_header = 'What’s
+        the expected workload?' accordion_body = accordion_body accordion_index
+        = '3' %} {% capture accordion_body %}
         <ul>
           <li>6 months of digital acquisition training.</li>
           <li>
