style featured talk

--- a/pages/talks.html
+++ b/pages/talks.html
@@ -5,14 +5,12 @@ permalink: /thoughts/talks/
 preload: hero-talks.svg
 ---
 
-{% include hero_banner.html
-  hero_content = 'Our spoken thoughts on design, <br class="linebreak">technology, and more.'
-  color = 'red'
-  image = 'hero-talks.svg'
-%}
+{% include hero_banner.html hero_content = 'Our spoken thoughts on design,
+<br class="linebreak" />technology, and more.' color = 'red' image =
+'hero-talks.svg' %}
 
 <div class="grid-container">
-  <h2 class="margin-heading">Featured</h2>
+  <h2 class="margin-heading mb-4">Featured</h2>
   <div class="talk__featured row">
     <div class="col-sm-8 d-flex flex-column align-items-stretch">
       <div class="embed-responsive embed-responsive-16by9">
@@ -29,9 +27,18 @@ preload: hero-talks.svg
       </div>
     </div>
     <div class="col-sm-4 d-flex flex-column align-items-stretch">
-      <h3 class="">Agile in a Legacy Environment</h3>
-      <p class="mt-3">Live at AgileGovCon: "Agile in a Legacy Environment"</p>
-      <p>Presenter: Robert L. Read, 18F co-founder</p>
+      <p class="kicker">June 28, 2017</p>
+      <h3 class="">Principles for agile procurement</h3>
+      <p class="mt-3 text">
+        <a href="/thoughts/blog/author/chris-cairns/">Chris Cairns</a> shares
+        why government IT procurements fail and how to increase their success
+        rate through the adoption of agile procurement principles.
+      </p>
+      <h4 class="kicker mb-1">Event</h4>
+      <p>AgileGovCon</p>
+      <a class="font-mono" href="https://www.youtube.com/watch?v=_eGtm66_X9E">
+        Watch video <i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+      </a>
     </div>
   </div>
   <h2 class="margin-heading">Videos</h2>
