fix ditap exec cta text

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -31,7 +31,7 @@ class_2_spots:
               <a
                 class="btn btn-warning text-dark mr-2 mt-sm-3"
                 href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
-                >Register networking
+                >Register now
               </a>
             </div>
           </div>
