link talk profile to team page

--- a/pages/talks.html
+++ b/pages/talks.html
@@ -30,7 +30,7 @@ preload: hero-talks.svg
       <p class="kicker">June 28, 2017</p>
       <h3 class="">Principles for agile procurement</h3>
       <p class="mt-3 text">
-        <a href="/thoughts/blog/author/chris-cairns/">Chris Cairns</a> shares
+        <a href="/company/about/#chris-cairns">Chris Cairns</a> shares
         why government IT procurements fail and how to increase their success
         rate through the adoption of agile procurement principles.
       </p>
