--- a/pages/trainings/service-design.html
+++ b/pages/trainings/service-design.html
@@ -269,8 +269,8 @@ class_2_spots:
   </div>
 </div>
 
-{% include cta.html header = "Deliver better public services." text = "Ready to
-create transformative user experiences through service design? Let’s get to
-work." text_css_class = "page-subfooter-text-col" cta_path =
+{% include cta.html header = "Deliver better public services." text = 'Ready to
+create transformative user experiences through service design? <br class="linebreak">Let’s get to
+work.' text_css_class = "page-subfooter-text-col" cta_path =
 "mailto:training@skylight.digital" cta = "Contact us" icon_css_class = "fa
 fa-at" %}
