Add pullquote improvements

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -226,21 +226,20 @@ class_2_spots:
           </div>
         </div>
 
-        <div class="post-blockquote mt-6">
-          <p>
-            As one of the first students to complete the DITAP program in 2016,
-            I walked away with the critical know-how necessary to help change
-            the way my agency acquires technology services. Because of what I
-            learned, the contracting results that I experienced supporting some
-            of the government’s most critical programs were the reasons why I
-            became an acquisition professional in the first place.
-          </p>
-          <cite>
-            <strong>Dan Levenson,</strong> Former Centers for Medicare &
-            Medicaid Services Digital Service Contracting Advisor and Lead
-            Contracting Officer for the Quality Payment Program
-          </cite>
-        </div>
+        {% include callout.html
+          type = "pullquote"
+          content = "As one of the first students to complete the DITAP program in 2016,
+                    I walked away with the critical know-how necessary to help change
+                    the way my agency acquires technology services. Because of what I
+                    learned, the contracting results that I experienced supporting some
+                    of the government’s most critical programs were the reasons why I
+                    became an acquisition professional in the first place."
+          cite_name = "Dan Levenson"
+          cite_title = "Former Centers for Medicare &
+                    Medicaid Services Digital Service Contracting Advisor and Lead
+                    Contracting Officer for the Quality Payment Program"
+          class = "mt-6"
+        %}
 
         <h2 id="instructors">Meet your instructors</h2>
         <p class="text-intro">
