--- a/pages/training.html
+++ b/pages/training.html
@@ -24,7 +24,7 @@ preload: hero-training.svg
             <h2 class="blog-post-title">
               Digital IT Acquisition Professional (DITAP) Training
             </h2>
-            <p class="blog-post-text">
+            <p class="card-text blog-post-text">
               Become a certified digial acquisition professional through our
               expert-led, 6-month, part-time course.
             </p>
@@ -48,7 +48,7 @@ preload: hero-training.svg
               Digital IT Acquisition Professional (DITAP) Training &mdash;
               Executive Edition
             </h2>
-            <p class="blog-post-text">
+            <p class="card-text blog-post-text">
               Become a certified digial acquisition professional through our
               expert-led, 6-month, part-time course.
             </p>
