--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -60,7 +60,7 @@ pagination:
             <p class="project-title-tag">{{item.title_tag}}</p>
             {% endif %}
             <h2 class="project-title {{context}}">{{item.title}}</h2>
-            <div class="project-text">{{item.excerpt | markdownify}}</div>
+            <div class="card-text project-text">{{item.excerpt | markdownify}}</div>
           </div>
           <div class="project-footer">
             <a href="{{item.permalink}}" tabindex="0">
