--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -35,7 +35,7 @@ preload: hero-toolkits.svg
             <h2 class="blog-post-title">
               Digital Talent Management Handbook
             </h2>
-            <p class="blog-post-text">
+            <p class="card-text blog-post-text">
               {{ site.data.toolkits.digital_talent_management.description }}
             </p>
           </div>
@@ -57,7 +57,7 @@ preload: hero-toolkits.svg
             <h2 class="blog-post-title">
               Data Sharing Playbook
             </h2>
-            <p class="blog-post-text">
+            <p class="card-text blog-post-text">
               {{ site.data.toolkits.data_sharing_playbook.description }}
             </p>
           </div>
@@ -79,7 +79,7 @@ preload: hero-toolkits.svg
             <h2 class="blog-post-title">
               Accessibility Guide
             </h2>
-            <p class="blog-post-text">
+            <p class="card-text blog-post-text">
               {{ site.data.toolkits.accessibility_guide.description }}
             </p>
           </div>
@@ -101,7 +101,7 @@ preload: hero-toolkits.svg
             <h2 class="blog-post-title">
               Agile Procurement Playbook
             </h2>
-            <p class="blog-post-text">
+            <p class="card-text blog-post-text">
               {{ site.data.toolkits.agile_procurement_playbook.description }}
             </p>
           </div>
@@ -123,7 +123,7 @@ preload: hero-toolkits.svg
             <h2 class="blog-post-title">
               Managing Technical Debt Guide
             </h2>
-            <p class="blog-post-text">
+            <p class="card-text blog-post-text">
               {{ site.data.toolkits.managing_technical_debt.description }}
             </p>
           </div>
