Update service design images

--- a/pages/services/service-design.html
+++ b/pages/services/service-design.html
@@ -36,7 +36,7 @@ class_2_spots:
             href="#why-service-design"
             role="button"
           >
-            <i class="far fa-arrow-alt-circle-down"></i>
+            <i class="fas fa-chevron-circle-down"></i>
           </a>
         </div>
       </div>
@@ -85,7 +85,7 @@ class_2_spots:
           inefficiency is due to a lack of service design.
         </p>
         <img
-          class="img-fluid w-50 float-right"
+          class="img--frontstage-backstage img-fluid mb-3"
           src="/img/service-design/frontstage-backstage.png"
           alt="Backstage and front stage"
         />
@@ -242,17 +242,28 @@ class_2_spots:
         <h2 class="margin-heading" id="how-to-engage-with-us">
           How to engage with us
         </h2>
-        <p>
-          The best way to contract with Skylight is through the federal
-          government’s Small Business Innovation Research (SBIR) / Small
-          Business Technology Transfer (STTR) program.
-        </p>
-        <p>
-          Through this program, the U.S. Air Force awarded Skylight a series of
-          STTR contracts related to service design. Any government agency can
-          leverage these contracts to issue direct (or non-competitive) awards —
-          without dollar, time, or size standard restrictions.
-        </p>
+        <div class="row">
+          <div class="col-sm-4 col-md-3">
+            <img
+              class="img-fluid mt-sm-3"
+              src="/img/service-design/people-high-fiving.png"
+              alt="Two people effortlessly high-fiving"
+            />
+          </div>
+          <div class="col-sm-6 col-md-9">
+            <p>
+              The best way to contract with Skylight is through the federal
+              government’s Small Business Innovation Research (SBIR) / Small
+              Business Technology Transfer (STTR) program.
+            </p>
+            <p>
+              Through this program, the U.S. Air Force awarded Skylight a series of
+              STTR contracts related to service design. Any government agency can
+              leverage these contracts to issue direct (or non-competitive) awards —
+              without dollar, time, or size standard restrictions.
+            </p>
+          </div>
+        </div>
         <p>
           For more information on how to work with Skylight through the
           SBIR/STTR program,
@@ -260,11 +271,6 @@ class_2_spots:
             >check out our guide</a
           >.
         </p>
-        <img
-          class="img-fluid w-50 mt-4"
-          src="/img/service-design/people-high-fiving.png"
-          alt="Two people effortlessly high-fiving"
-        />
       </div>
     </div>
   </div>
