Update service design imgs

--- a/pages/services/service-design.html
+++ b/pages/services/service-design.html
@@ -13,7 +13,7 @@ class_2_spots:
 ---
 
 <div
-  class="bg-info hero-banner"
+  class="bg-primary hero-banner"
   style="
     background-image: url(/img/hero-service-design.svg);
     background-repeat: no-repeat;
@@ -32,7 +32,7 @@ class_2_spots:
             you use it to deliver greater public value.
           </p>
           <a
-            class="text-white mt-3"
+            class="text-white d-block mt-1"
             href="#why-service-design"
             role="button"
           >
@@ -86,7 +86,7 @@ class_2_spots:
         </p>
         <img
           class="img--frontstage-backstage img-fluid mb-3"
-          src="/img/service-design/frontstage-backstage.png"
+          src="/img/service-design/service-design-stages.svg"
           alt="Backstage and front stage"
         />
         <p>
@@ -131,7 +131,7 @@ class_2_spots:
         </p>
         <img
           class="img-fluid"
-          src="/img/service-design/framework.png"
+          src="/img/service-design/service-design-framework.svg"
           alt="Service design framework"
         />
         <h2 class="margin-heading" id="case-studies">Case studies</h2>
@@ -246,7 +246,7 @@ class_2_spots:
           <div class="col-sm-4 col-md-3">
             <img
               class="img-fluid mt-sm-3"
-              src="/img/service-design/people-high-fiving.png"
+              src="/img/service-design/people-high-fiving.svg"
               alt="Two people effortlessly high-fiving"
             />
           </div>
