update service design cards

--- a/pages/services/service-design.html
+++ b/pages/services/service-design.html
@@ -135,8 +135,8 @@ class_2_spots:
           alt="Service design framework"
         />
         <h2 class="margin-heading" id="case-studies">Case studies</h2>
-        <div class="blog-posts-row">
-          <article class="col-8">
+        <div class="blog-posts-row mx-0">
+          <article>
             <div
               class="blog-post-card card-link"
               data-href="/work/experience/usaf-gearfit/"
@@ -144,7 +144,7 @@ class_2_spots:
             >
               <div
                 role="img"
-                class="blog-post-img"
+                class="card-img blog-post-img col-md-4"
                 style="
                   background-image: url(/img/projects/usaf_gearfit/gearfit.svg);
                 "
@@ -159,25 +159,23 @@ class_2_spots:
                   Using service design to transform how the U.S. Air Force
                   provides better-fitting gear to aircrew personnel.
                 </p>
+                <div class="card-footer blog-post-footer">
+                  <a href="/work/experience/usaf-gearfit/" tabindex="0">
+                    <span>Read more</span
+                    ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+                  </a>
+                </div>
               </div>
-              <div class="blog-post-footer">
-                <a href="/work/experience/usaf-gearfit/" tabindex="0">
-                  <span>Read more</span
-                  ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
           </article>
-          <div class="col-"></div>
-          <article class="col-8 mt-5">
+          <article class="mt-5">
             <div
               class="blog-post-card card-link"
-              data-href="https://www.publicspendforum.net/podcasts/modernizing-government-it-micropurchase-podcast/"
+              data-href="#0"
               tabindex="-1"
             >
               <div
                 role="img"
-                class="blog-post-img"
+                class="card-img blog-post-img col-md-4"
                 style="
                   background-image: url(/img/podcast/podcast-placeholder-02.svg);
                 "
@@ -195,25 +193,24 @@ class_2_spots:
                   the MACBIS (Medicaid and CHIP Business Information Solutions)
                   product ecosystem.
                 </p>
-              </div>
-              <div class="blog-post-footer">
-                <a href="/work/experience/usaf-gearfit/" tabindex="0">
-                  <span>Read more</span
-                  ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
+                <div class="card-footer blog-post-footer">
+                  <a href="/work/experience/usaf-gearfit/" tabindex="0">
+                    <span>Read more</span
+                    ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </article>
-          <div class="col-"></div>
-          <article class="col-8 mt-5">
+          <article class="mt-5">
             <div
               class="blog-post-card card-link"
-              data-href="https://www.publicspendforum.net/podcasts/modernizing-government-it-micropurchase-podcast/"
+              data-href="#0"
               tabindex="-1"
             >
               <div
                 role="img"
-                class="blog-post-img"
+                class="card-img blog-post-img col-md-4"
                 style="
                   background-image: url(/img/podcast/podcast-placeholder-02.svg);
                 "
@@ -229,12 +226,12 @@ class_2_spots:
                   toward mastering service design while improving their
                   customers’ cloud migration experience.
                 </p>
-              </div>
-              <div class="blog-post-footer">
-                <a href="/work/experience/usaf-gearfit/" tabindex="0">
-                  <span>Read more</span
-                  ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
+                <div class="card-footer blog-post-footer">
+                  <a href="/work/experience/usaf-gearfit/" tabindex="0">
+                    <span>Read more</span
+                    ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </article>
@@ -245,7 +242,7 @@ class_2_spots:
         <div class="row">
           <div class="col-sm-4 col-md-3">
             <img
-              class="img-fluid mt-sm-3"
+              class="img-fluid mt-sm-3 mb-3"
               src="/img/service-design/people-high-fiving.svg"
               alt="Two people effortlessly high-fiving"
             />
