--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -131,8 +131,8 @@ class_2_spots:
         </p>
         <img
           class="img-fluid"
-          src="/img/service-design/service-design-framework.svg"
-          alt="Service design framework"
+          src="/img/service-design/skylight-service-design-framework-descriptions.svg"
+          alt="Skylight Service Design Framework"
         />
         <h2 class="margin-heading" id="case-studies">Case studies</h2>
         <div class="blog-posts-row mx-0">
