--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -4,7 +4,7 @@ title: Service design
 permalink: /work/services/service-design/
 excerpt: Deliver better public services.
 image: /img/ditap/ditap-banner.png
-image_description: Banner of Skylight's Digital IT Acquisition Professional Training course.
+image_description: People designing a complex service.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap page-service-design
 preload: hero.svg
@@ -25,7 +25,7 @@ class_2_spots:
       <div class="">
         <div class="text-center">
           <h1 class="text-white">
-            Service Design: <br class="linebreak">Transforming user experiences
+            Service Design: <br class="linebreak">Transforming User Experiences
           </h1>
           <p class="text-white font-lg mt-2 mb-0">
             Learn what service design can do for you and how Skylight <br class="linebreak">can help
@@ -87,7 +87,7 @@ class_2_spots:
         <img
           class="img--frontstage-backstage img-fluid mb-3"
           src="/img/service-design/service-design-stages.svg"
-          alt="Backstage and front stage"
+          alt="Service design components broken down into frontstage and backstage."
         />
         <p>
           Through service design, government organizations can take a more
@@ -132,7 +132,7 @@ class_2_spots:
         <img
           class="img-fluid"
           src="/img/service-design/skylight-service-design-framework-descriptions.svg"
-          alt="Skylight Service Design Framework"
+          alt="The Skylight Service Design Framework."
         />
         <h2 class="margin-heading" id="case-studies">Case studies</h2>
         <div class="blog-posts-row mx-0">
@@ -244,7 +244,7 @@ class_2_spots:
             <img
               class="img-fluid mt-sm-2 mb-3"
               src="/img/service-design/people-high-fiving.svg"
-              alt="Two people effortlessly high-fiving"
+              alt="Two people effortlessly high-fiving."
             />
           </div>
           <div class="col-sm-6 col-md-8">
@@ -274,7 +274,7 @@ class_2_spots:
 </div>
 
 {% include cta.html header = "Deliver better public services." text = 'Ready to
-create transformative user experiences through service design? <br class="linebreak">Let’s get to
+create transformative user experiences through service design? Let’s get to
 work.' text_css_class = "page-subfooter-text-col" cta_path =
-"mailto:training@skylight.digital" cta = "Contact us" icon_css_class = "fa
+"mailto:hello@skylight.digital" cta = "Contact us" icon_css_class = "fa
 fa-at" %}
