service design page copy and html edits

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -1,15 +1,13 @@
 ---
 layout: default
-title: Service design
+title: "Service design: Transforming user experiences"
 permalink: /work/services/service-design/
-excerpt: Deliver better public services.
+excerpt: Learn what service design can do for you and how Skylight can help you use it to deliver greater public value.
 image: /img/ditap/ditap-banner.png
 image_description: People designing a complex service.
-tags: [digital acquisition training, agile acquisition training]
+tags: [service design]
 class: ditap page-service-design
 preload: hero.svg
-class_1_spots:
-class_2_spots:
 ---
 
 <div
@@ -25,7 +23,7 @@ class_2_spots:
       <div class="">
         <div class="text-center">
           <h1 class="text-white">
-            Service Design: <br class="linebreak">Transforming User Experiences
+            Service design: <br class="linebreak">Transforming user experiences
           </h1>
           <p class="text-white font-lg mt-2 mb-0">
             Learn what service design can do for you and how Skylight <br class="linebreak">can help
@@ -86,7 +84,7 @@ class_2_spots:
         </p>
         <img
           class="img--frontstage-backstage img-fluid mb-3"
-          src="/img/service-design/service-design-stages.svg"
+          src="/img/service_design/service-design-stages.svg"
           alt="Service design components broken down into frontstage and backstage."
         />
         <p>
@@ -131,7 +129,7 @@ class_2_spots:
         </p>
         <img
           class="img-fluid"
-          src="/img/service-design/skylight-service-design-framework-descriptions.svg"
+          src="/img/service_design/skylight-service-design-framework-descriptions.svg"
           alt="The Skylight Service Design Framework."
         />
         <h2 class="margin-heading" id="case-studies">Case studies</h2>
@@ -243,7 +241,7 @@ class_2_spots:
           <div class="col-sm-4 col-md-4">
             <img
               class="img-fluid mt-sm-2 mb-3"
-              src="/img/service-design/people-high-fiving.svg"
+              src="/img/service_design/people-high-fiving.svg"
               alt="Two people effortlessly high-fiving."
             />
           </div>
