--- a/index.html
+++ b/index.html
@@ -146,9 +146,8 @@ preload: hero.svg
 
       <div class="landing-content-secondary-col">
         <p>
-          Succeeding in today’s digital age requires engaging with teams who
-          understand both digital and government. We’re designed from the
-          bottom-up to help you achieve digital mastery.
+          Delivering great public services requires a deep knowledge of both technology and government. 
+          We’re designed from the ground up to help you achieve digital mastery.
         </p>
       </div>
 
