--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ preload: hero.svg
 
       <div class="landing-content-secondary-col">
         <p>
-          Delivering great public services requires a deep knowledge of both technology and government. 
+          Delivering great public services requires teams who understand both technology and government. 
           We’re designed from the ground up to help you achieve digital mastery.
         </p>
       </div>
