--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ preload: hero.svg
       <div class="landing-content-secondary-col">
         <p>
           Delivering great public services requires teams who understand both technology and government. 
-          We’re built from the ground up to help you achieve digital mastery.
+          We’re built from the ground up to help you reach digital mastery.
         </p>
       </div>
 
