Move seervice design footer to include and re-add linebreak

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -270,8 +270,4 @@ preload: hero.svg
   </div>
 </div>
 
-{% include cta.html header = "Deliver better public services." text = 'Ready to
-create transformative user experiences through service design? Let’s get to
-work.' text_css_class = "page-subfooter-text-col" cta_path =
-"mailto:hello@skylight.digital" cta = "Contact us" icon_css_class = "fa
-fa-at" %}
+{% include service_design_cta.html %}
