--- a/pages/about.html
+++ b/pages/about.html
@@ -74,9 +74,10 @@ preload: hero-about-us.svg
                       {% else %}
                         {% assign target = '_blank' %}
                       {% endif %}
-                      <a href="{{social.link}}" target={{target}} data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
+                      {% assign link_description = social.link_description | replace: "'", "&rsquo;" %}
+                      <a href="{{social.link}}" target={{target}} data-toggle="tooltip" data-placement="top" data-animation="false" title="{{link_description}}">
                         <i class="fa fa-{{social.fa_icon_name}}" aria-hidden="true" title="{{social.name}}"></i>
-                        <span class="sr-only">{{social.link_description}}</span>
+                        <span class="sr-only">{{link_description}}</span>
                       </a>
                     {% endfor %}
                 </div>
