--- a/pages/talks.html
+++ b/pages/talks.html
@@ -66,7 +66,7 @@ pagination:
   {% endfor %}
 
   <div class="row mt-6 pt-4">
-    {% for item in site.talks %}
+    {% for item in paginator.posts %}
       {% unless item.featured == true %}
         <article class="blog-post-col" id="{{ item.title | slugify }}">
           <div
@@ -121,4 +121,7 @@ pagination:
   </div>
 </div>
 
+{% include pagination.html %}
+
 {% include hire_us_cta.html %}
+
