Increase spacing on services page

--- a/pages/services.html
+++ b/pages/services.html
@@ -18,7 +18,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
 <div class="services-content left-justified-list">
   <div class="">
     <div class="grid-container prose">
-      <div class="row">
+      <div class="row pt-3">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Service Delivery</h2>
           <p>
@@ -78,7 +78,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
     </div>
   </div>
 
-  <div class="mt-5 bg-ochre-lightest py-5">
+  <div class="mt-6 bg-ochre-lightest py-6">
     <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
@@ -136,7 +136,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
     </div>
   </div>
 
-  <div class="mt-5">
+  <div class="mt-6">
     <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
@@ -196,7 +196,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
     </div>
   </div>
 
-  <div class="mt-5 bg-ochre-lightest py-5">
+  <div class="mt-6 bg-ochre-lightest py-6">
     <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
@@ -264,7 +264,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
     </div>
   </div>
 
-  <div class="mt-5">
+  <div class="mt-6">
     <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
