Fix toolkits page bottom margin

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -24,7 +24,7 @@ preload: hero-toolkits.svg
       Feel free to copy and adapt them as you choose.
     </p>
 
-    <div class="blog-posts-row mt-5">
+    <div class="blog-posts-row my-5 mb-md-0">
       <article class="blog-post-col col-md-6">
         <div
           class="blog-post-card card-link"
