--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -403,10 +403,10 @@ class_2_spots:
                 <p>$7,500 USD</p>
               </div>
             </div>
-            <p class="mt-2">
+            <p class="mt-3">
               <strong class="tuition-card-link"
                 >Register now<i
-                  class="fal fa-long-arrow-right ml-2"
+                  class="fal fa-long-arrow-right ml-3 font-lg"
                   aria-hidden="true"
                 ></i
               ></strong>
