update ditap exec register btn

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -364,7 +364,7 @@ class_2_spots:
             <p class="mt-2">
               <strong class="tuition-card-link"
                 >Register now<i
-                  class="fal fa-long-arrow-right ml-2"
+                  class="fal fa-long-arrow-right ml-3 font-lg"
                   aria-hidden="true"
                 ></i
               ></strong>
@@ -395,7 +395,7 @@ class_2_spots:
             <p class="mt-2">
               <strong class="tuition-card-link"
                 >Register now<i
-                  class="fal fa-long-arrow-right ml-2"
+                  class="fal fa-long-arrow-right ml-3 font-lg"
                   aria-hidden="true"
                 ></i
               ></strong>
