update DITAP copy

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -8,8 +8,8 @@ image_description: Banner for the executive edition of Skylight’s Digital IT A
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
 preload: hero-training-single.svg
-class_1_spots:
-class_2_spots:
+class_1_spots: 25
+class_2_spots: 25
 ---
 
 <div
@@ -346,7 +346,7 @@ class_2_spots:
         >
           <div class="col-12">
             <h3 class="class-heading">
-              Thursday, October 21, 9:00 am &ndash; 5:00 pm ET
+              Thu, Oct 21, 9:00 am &ndash; 5:00 pm ET
             </h3>
             {% if page.class_1_spots %}
             <div class="class-spots">
@@ -377,7 +377,7 @@ class_2_spots:
         >
           <div class="col-12">
             <h3 class="class-heading">
-              Thursday, April 21, 9:00 am &ndash; 5:00 pm ET
+              Thu, Apr 21, 9:00 am &ndash; 5:00 pm ET
             </h3>
             {% if page.class_2_spots %}
             <div class="class-spots">
