--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -12,7 +12,7 @@ image_description: Banner of Skylight’s Digital IT Acquisition Professional Tr
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
 preload: hero-training-single.svg
-class_1_spots: 27
+class_1_spots:
 class_2_spots:
 ---
 
